// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xy_expression XYChart component it renders area 1`] = `
<Chart
  className="lnsChart"
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    title=""
  />
  <inject-AreaSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": 3,
        },
        Object {
          "a": 1,
          "b": 5,
          "c": 4,
        },
      ]
    }
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={Array []}
    xAccessor="c"
    yAccessors={
      Array [
        "a",
        "b",
      ]
    }
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders bar 1`] = `
<Chart
  className="lnsChart"
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    title=""
  />
  <inject-BarSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": 3,
        },
        Object {
          "a": 1,
          "b": 5,
          "c": 4,
        },
      ]
    }
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={Array []}
    xAccessor="c"
    yAccessors={
      Array [
        "a",
        "b",
      ]
    }
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders horizontal bar 1`] = `
<Chart
  className="lnsChart"
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={90}
    showLegend={false}
    showLegendDisplayValue={false}
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    title=""
  />
  <inject-BarSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": 3,
        },
        Object {
          "a": 1,
          "b": 5,
          "c": 4,
        },
      ]
    }
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={Array []}
    xAccessor="c"
    yAccessors={
      Array [
        "a",
        "b",
      ]
    }
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders line 1`] = `
<Chart
  className="lnsChart"
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    title=""
  />
  <inject-LineSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": 3,
        },
        Object {
          "a": 1,
          "b": 5,
          "c": 4,
        },
      ]
    }
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={Array []}
    xAccessor="c"
    yAccessors={
      Array [
        "a",
        "b",
      ]
    }
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked area 1`] = `
<Chart
  className="lnsChart"
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    title=""
  />
  <inject-AreaSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": 3,
        },
        Object {
          "a": 1,
          "b": 5,
          "c": 4,
        },
      ]
    }
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    xAccessor="c"
    yAccessors={
      Array [
        "a",
        "b",
      ]
    }
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked bar 1`] = `
<Chart
  className="lnsChart"
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    title=""
  />
  <inject-BarSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": 3,
        },
        Object {
          "a": 1,
          "b": 5,
          "c": 4,
        },
      ]
    }
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    xAccessor="c"
    yAccessors={
      Array [
        "a",
        "b",
      ]
    }
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked horizontal bar 1`] = `
<Chart
  className="lnsChart"
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={90}
    showLegend={false}
    showLegendDisplayValue={false}
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    title=""
  />
  <inject-BarSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "a": 1,
          "b": 2,
          "c": 3,
        },
        Object {
          "a": 1,
          "b": 5,
          "c": 4,
        },
      ]
    }
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    xAccessor="c"
    yAccessors={
      Array [
        "a",
        "b",
      ]
    }
  />
</Chart>
`;
